--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Flipnote Directions</title>
+  <title>Flipnote操作步骤</title>
   <style>
    * {
    margin: 0;
@@ -26,11 +26,10 @@
 <body>
 
 <center>
-	<h1>Frogminer Flipnote Directions</h1>
-	(scroll down for more slides)
+	<h1>Frogminer Flipnote操作步骤</h1>
 	<br><br><br>
 	<a href="ti9jk.mp4">
-		<img src="movie.png" style="width: 50px; height:40px; padding-bottom: 0px;"><br>Optional video guide</img>
+		<img src="movie.png" style="width: 50px; height:40px; padding-bottom: 0px;"><br>或者看看视频教程</img>
 	</a>
 	<br><br><br>
 </center>
